--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "homepage":".",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
